# borme_db

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  DATOS_BORME.md
.claude/docs/: ARQUITECTURA.md  DESARROLLO.md
.stats/: by_company_type.json  by_month.json  by_province.json  by_year.json  general.json  rankings.json
config/: docker-compose.yml
src/borme/: __init__.py  __main__.py  cli.py  config.py  db.py  downloader.py  importer.py  logger.py  models.py  paths.py  state.py  stats.py
src/bormekai/: __init__.py  acto.py  borme.py  cargo.py  parser.py  provincia.py  regex.py  seccion.py  sociedad.py
